@@ -1,5 +1,8 @@
 2007-01-02 Werner Hoch <werner.ho@gmx.de>
 
+	* src/x_script.c: replaced the GtkFileSelection dialog with a
+	  GtkFileChooserDialog
+
 	* src/x_log.c: insert text at the end of the buffer instead of cursor
 	  position. Replaced gtk_text_view_scroll_to_iter() with
 	  gtk_text_view_scroll_to_mark() which works more reliable.
